관리자 API(/api/admin/**) 접근 권한 제한 추가